# FerricLink

./: .justfile  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  release-please-config.json
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  docs.yml  release.yml  website.yml
crates/ferriclink-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ferriclink-core/crates/ferriclink-core/: CHANGELOG.md
crates/ferriclink-core/examples/: cache_usage.rs  env_usage.rs  example_selector_usage.rs  exception_usage.rs  globals_usage.rs  rate_limiter_usage.rs  structured_query_usage.rs
crates/ferriclink-core/src/: caches.rs  callbacks.rs  documents.rs  embeddings.rs  env.rs  errors.rs  example_selectors.rs  globals.rs  language_models.rs  lib.rs  messages.rs  rate_limiters.rs  retrievers.rs  runnables.rs  serializable.rs  structured_query.rs  tools.rs  utils.rs  vectorstores.rs
docs/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/blog/: 2025-10-01-welcome.md
docs/docs/: index.md  install.md  intro.md  quickstart.md
docs/docs/guides/: caching.md  environment-information.md  error-handling.md  example-selectors.md  global-configuration.md  rate-limiting.md
docs/docs/troubleshooting/: index.md
docs/docs/troubleshooting/errors/: invalid_prompt_input.md  model_authentication.md  model_rate_limit.md  output_parsing_failure.md  runtime_error.md
docs/src/css/: custom.css
docs/src/pages/: index.mdx  projects.mdx
docs/static/api/: index.html
docs/static/api/latest/: index.html
examples/: basic_usage.rs  structured_query_usage.rs
scripts/: check-rust.sh  docs.sh
