[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
description = "A Rust library for building AI applications, inspired by LangChain"
authors = ["Ferrum Labs"]
license = "Apache-2.0"
repository = "https://github.com/ferrum-labs/ferriclink"
homepage = "https://ferrum-labs.github.io"
documentation = "https://docs.rs/ferriclink"
keywords = ["ai", "llm", "langchain", "rust", "machine-learning", "generative-ai"]
categories = ["science", "web-programming::http-client", "asynchronous"]
readme = "README.md"
rust-version = "1.85.0"

[workspace.dependencies]

[workspace.lints.clippy]
uninlined_format_args = "warn"
